--- a/app/views/instruments/index.html.erb
+++ b/app/views/instruments/index.html.erb
@@ -3,7 +3,7 @@
 <ul>
   <% @instruments.each do |instrument| %>
   <li> <%= link_to instrument.name, instrument_path(instrument) %></li>
-  <%= link_to instrument_path(@instrument), data: {turbo_method: :delete, turbo_confirm: "Est-tu putain de sur ?!"} do %>
+  <%= link_to instrument_path(instrument), data: {turbo_method: :delete, turbo_confirm: "Est-tu putain de sur ?!"} do %>
   <i class="fa-solid fa-trash-can "></i>
   <% end %>
   <% end %>
