--- a/app/views/instruments/show.html.erb
+++ b/app/views/instruments/show.html.erb
@@ -7,8 +7,8 @@
 <p> <%= @instrument.age %></p>
 <p> <%= @instrument.price %></p>
 <%= link_to instrument_path(@instrument), data: {turbo_method: :delete, turbo_confirm: "Est-tu putain de sur ?!"} do %>
-<i class="fa-solid fa-trash-can "></i>
+  <i class="fa-solid fa-trash-can "></i>
 <% end %>
 <%= link_to edit_instrument_path(@instrument) do %>
-<i class="fa-light fa-pencil"></i>
+  <i class="fa-solid fa-pen-to-square"></i>
 <% end %>
