--- a/app/views/instruments/index.html.erb
+++ b/app/views/instruments/index.html.erb
@@ -1,5 +1,7 @@
 <h1>Every instruments</h1>
 
+<%= link_to "share instruments",new_instrument_path  %>
+
 <ul>
   <% @instruments.each do |instrument| %>
   <li> <%= link_to instrument.name, instrument_path(instrument) %></li>
