--- a/app/views/instruments/new.html.erb
+++ b/app/views/instruments/new.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col">
-      <%= render "shared/form", instrument: @instrument %>
+      <%= render "shared/form_instruments", instrument: @instrument %>
     </div>
   </div>
 </div>
