--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,27 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.unsplash.com/photo-1511379938547-c1f69419868d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2940&q=80);">
+  <div class="container">
+    <h1>RBNBEAT</h1>
+    <p><span data-controller="typed-js"></span></p>  
+  </div>
+</div>
+
+<div class="cards">
+  <div class="card-category">
+    <img class="card-img" src="https://images.unsplash.com/photo-1525201548942-d8732f6617a0?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80" alt="">
+    <div class="card-text">
+      <h2>Rent an instrument</h2>
+      <p>Need an instrument for some days ? </br>Go check the instrument available</p>
+    </div>
+    <button class="btn btn-primary">Rent an instrument</button>
+  </div>
+  <div class="card-category">
+    <img class="card-img" id="card-img-share" src="https://images.unsplash.com/photo-1595619768849-b5f178a697ee?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MzN8fHBpYW5vfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=800&q=60" alt="">
+    <div class="card-text">
+      <h2>Share your instrument</h2>
+      <p>You have an instrument that you don't use ?</br>
+      Don't let it gather dust and lend it</p>
+    </div>
+    <button class="btn btn-primary">Share your instrument</button>
+  </div>
+</div>
+
