--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -3,3 +3,12 @@
 @import "avatar";
 @import "form_legend_clear";
 @import "navbar";
+@import "card";
+
+h1 {
+  color: #040303;
+  font-weight: bold;
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  padding-top: 15px;
+  padding-bottom: 15px;
+}
