--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -1,3 +1,33 @@
+.list-index {
+  overflow: hidden;
+  // height: 520px;
+  background-color: #478978;
+}
+
+.cards-index {
+  padding: 15px;
+  background-color: #FCF7F8;
+  box-shadow: 0 0 15px rgb(156, 152, 152);
+  display: flex;
+  margin: 25px;
+}
+
+.link-index a {
+  font-size: 26px;
+  font-weight: bold;
+  margin: 5px;
+  text-decoration: none;
+  background-color: #040303;
+  color: #FCF7F8;
+  padding: 15px;
+}
+
+.cards-index i {
+  margin: 50%;
+  padding-top: 5px;
+  color: red;
+}
+
 .card-category {
     margin: 32px auto;
     background-size: cover;
@@ -41,38 +71,32 @@
     font-weight: normal;
   }
   
-  // Large devices (desktops, 992px and up)
-  @media (max-width: 950px) {
+  @media (max-width: 650px) {
     .cards {
-      grid-template-columns: 1fr 1fr;
+      grid-template-columns: 1fr;
     }
+  }
 
+  @media (max-width: 950px) {
+    
     .card-category {
-        width: 300px;
-        height: 300px;
+      width: 300px;
+      height: 300px;
     }
-
+    
     .card-img {
-        width: 250px;
-        height: 150px;
+      width: 250px;
+      height: 150px;
     }
-
+    
     #card-img-share {
-        height: 150px;
+      height: 150px;
     }
-
+    
     .card-text h2 {
         font-size: 16px;
     }
     .card-text p {
         font-size: 12px;
-    }
-    
-  }
-
-  // Extra large devices (large desktops, 1200px and up)
-  @media (min-width: 1200px) {
-    .cards {
-      grid-template-columns: 1fr 1fr;
     }
   }
