front improved on index and navbar

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -6,11 +6,4 @@
 @import "form_legend_clear";
 @import "navbar";
 @import "card";
-
-h1 {
-  color: #040303;
-  font-weight: bold;
-  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-  padding-top: 15px;
-  padding-bottom: 15px;
-}
+@import "headers";
