--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -1,31 +1,46 @@
 .list-index {
   overflow: hidden;
-  // height: 520px;
-  background-color: #478978;
+  // height: 120px;
+  background: white;
+  padding-right: 50px;
+}
+
+.list-index img {
+  height: 100%;
+  width: 120px;
+  object-fit: cover;
+}
+
+.list-index h2 {
+  font-weight: bold;
+ }
+
+ .list-index p {
+  font-style: oblique;
+ }
+
+.list-index .cards-index {
+  padding: 16px;
+  margin-right: 60px;
 }
 
 .cards-index {
-  padding: 15px;
-  background-color: #FCF7F8;
-  box-shadow: 0 0 15px rgb(156, 152, 152);
   display: flex;
+  align-items: center;
   margin: 25px;
+  box-shadow: 0 0 15px rgba(0,0,0,0.2)
 }
 
-.link-index a {
-  font-size: 26px;
-  font-weight: bold;
-  margin: 5px;
+.cards-index a {
+  font-size: 24px;
   text-decoration: none;
-  background-color: #040303;
-  color: #FCF7F8;
-  padding: 15px;
+  color: black;
+  font-family: 'Libre Baskerville', serif;
+  margin-left: 35px;
 }
 
 .cards-index i {
-  margin: 50%;
-  padding-top: 5px;
-  color: red;
+  color: purple;
 }
 
 .card-category {
@@ -46,7 +61,7 @@
     border-radius: 5px;
     box-shadow: 0 0 15px rgba(0,0,0,0.2);
   }
-  
+
   .cards {
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -70,7 +85,7 @@
     font-size: 16px;
     font-weight: normal;
   }
-  
+
   // Large devices (desktops, 992px and up)
   @media (max-width: 950px) {
     .cards {
@@ -97,7 +112,7 @@
     .card-text p {
         font-size: 12px;
     }
-    
+
   }
 
   // Extra large devices (large desktops, 1200px and up)
