--- a/app/views/instruments/index.html.erb
+++ b/app/views/instruments/index.html.erb
@@ -2,12 +2,17 @@
   <h1>Every instruments</h1>
   <div class= "list-index">
     <% @instruments.each do |instrument| %>
-      <div class= "cards-index">
-        <h2 class= "link-index"><%= link_to instrument.name, instrument_path(instrument) %></h2>
-        <%= link_to instrument_path(instrument), data: {turbo_method: :delete, turbo_confirm: "Est-tu p*tain de sur ?!"} do %>
-          <i class="fa-solid fa-trash-can "></i>
+      <div class="row">
+        <div class= "cards-index">
+          <div class="col-sm-4 col-lg-1">
+            <%= cl_image_tag instrument.photos[0].key %>
+          </div>
+          <div class="col-sm-8 col-lg-11">
+            <h2><%= link_to instrument.name, instrument_path(instrument) %></h2>
+            <p><%= link_to instrument.brand, instrument_path(instrument) %></p>
+          </div>
+        </div>
       </div>
-      <% end %>
     <% end %>
   </div>
 </div>
