--- a/app/views/instruments/index.html.erb
+++ b/app/views/instruments/index.html.erb
@@ -1,5 +1,6 @@
 <div class="container">
   <h1>Every instruments</h1>
+  <%= link_to "share instruments",new_instrument_path %>
   <div class= "list-index">
     <% @instruments.each do |instrument| %>
       <div class= "cards-index">
