--- a/app/views/shared/_form_bookings.html.erb
+++ b/app/views/shared/_form_bookings.html.erb
@@ -1,11 +1,15 @@
-<%= simple_form_for [@instrument, @booking] do |f| %>
-  <%# <%= f.association :instrument, prompt: "Select an instrument" , input_html: { data: { controller: "select" } } %>
-  <%= f.input :rent_start_date, as: :date, start_year: Date.today.year,
-                              end_year: Date.today.year + 12, discard_day: false,
-                              order: [:day, :month, :year]%>
-  <%= f.input :rent_end_date, as: :date, start_year: Date.today.year,
-                              end_year: Date.today.year + 12, discard_day: false,
-                              order: [:day, :month, :year] %>
+<%= simple_form_for [@instrument, @booking], html: {data: {controller: "flatpickr"}} do |f| %>
+  <%= f.input :rent_start_date, as: :string,input_html: {
+                              data: {
+                                flatpickr_target: "rentStartDate",
+                              } }
+                              %>
+  <%= f.input :rent_end_date, as: :string,
+                              input_html: {
+                                data: {
+                                  flatpickr_target: 'rentEndDate',
+                                } } %>
+
   <%= f.submit class: "btn btn-primary" %>
 <% end %>
 <%= link_to "index", bookings_path, class: "btn btn-primary mt-3"%>
