--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -12,7 +12,7 @@
       <h2>Rent an instrument</h2>
       <p>Need an instrument for some days ? </br>Go check the instrument available</p>
     </div>
-    <button class="btn btn-primary">Rent an instrument</button>
+    <button class="btn btn-dark"><%= link_to 'Rent an instrument', instruments_path %></button>
   </div>
   <div class="card-category">
     <img class="card-img" id="card-img-share" src="https://images.unsplash.com/photo-1595619768849-b5f178a697ee?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MzN8fHBpYW5vfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=800&q=60" alt="">
@@ -21,7 +21,7 @@
       <p>You have an instrument that you don't use ?</br>
       Don't let it gather dust and lend it</p>
     </div>
-    <button class="btn btn-primary">Share your instrument</button>
+    <button class="btn btn-dark"><%= link_to 'Share your instrument', bookings_path %></button>
   </div>
 </div>
 
