--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -46,6 +46,11 @@
     border-radius: 5px;
     box-shadow: 0 0 15px rgba(0,0,0,0.2);
   }
+
+  .card-category a {
+    color: white;
+    text-decoration: none;
+  }
   
   .cards {
     display: grid;
