--- a/app/views/instruments/index.html.erb
+++ b/app/views/instruments/index.html.erb
@@ -1,12 +1,18 @@
 <div class="container">
   <h1>Every instruments</h1>
-  <%= link_to "share instruments",new_instrument_path %>
+  <div class = "share">
+    <%= link_to "Share instruments",new_instrument_path %>
+  </div>
   <div class= "list-index">
     <% @instruments.each do |instrument| %>
       <div class="row">
         <div class= "cards-index">
           <div class="col-sm-4 col-lg-1">
-            <%= cl_image_tag instrument.photos[0].key %>
+            <% if instrument.photos.attached? %>
+              <%= cl_image_tag instrument.photos[0].key %>
+            <% else %>
+              <img src="https://image.shutterstock.com/image-vector/no-ban-stop-signs-music-260nw-271087253.jpg">
+            <% end %>
           </div>
           <div class="col-sm-8 col-lg-11">
             <h2><%= link_to instrument.name, instrument_path(instrument) %></h2>
