--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -3,7 +3,7 @@
 @import "avatar";
 @import "banner";
 @import "card";
+@import "carousel";
 @import "form_legend_clear";
 @import "navbar";
-@import "card";
 @import "headers";
