--- a/app/views/instruments/show.html.erb
+++ b/app/views/instruments/show.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="show-container d-flex justify-content-around align-items-center mt-3">
-    <div class="caroussel">
-      <%= cl_image_tag @instrument.photos[0].key%>
+    <div class="carousel-show">
+      <%= render 'shared/carousel' %>
     </div>
     <div class="show-container-infos">
       <p><%= @instrument.name %></p>
@@ -9,7 +9,7 @@
       <p>Category: <%= @instrument.category %></p>
       <p>Used since: <%= @instrument.age %> years</p>
       <p>Price: <%= @instrument.price %>$/day</p>
-      <p>Owner: <%= cl_image_tag @instrument.user.photo.key %><%= @instrument.user.pseudo%></p>
+      <p>Owner: <%= cl_image_tag @instrument.user.photo.key, class: 'show-container-infos-img' %><%= @instrument.user.pseudo%></p>
     </div>
   </div>
   <div class="show-container-map-reservation d-flex justify-content-between mt-5">
@@ -20,12 +20,11 @@
       <% if user_signed_in? && current_user.email === @instrument.user.email %>
         <div class="show-edit-delete">
           <%= link_to "Edit", edit_instrument_path %>
-          <button>delete</button>
+          <%= link_to "Delete", instrument_path, data: {turbo_method: :delete, turbo_confirm: 'Are you sure ?'} %>
         </div>
       <% else %>
         <div class="show-reservation d-flex flex-column">
-          calendar
-          <button>reserve</button>
+          <%= render 'shared/form_bookings' %>
         </div>
       <% end %>
     </div>
