--- a/app/assets/stylesheets/components/_carousel.scss
+++ b/app/assets/stylesheets/components/_carousel.scss
@@ -1,14 +1,11 @@
-.carousel-show {
-    max-width: 600px;
+.carousel-inner{
+    height: 550px;
+    width: 650px;
+    display: flex;
+    align-items: center;
+}
 
-}
-.carousel {
-    min-height: 600px;
-}
-.carousel-item img {
+.carousel-inner > .carousel-item > img, .carousel-inner > .carousel-item > a > img {
     width: 100%;
-}
-
-.carousel-indicators button {
-    color: red
+    text-align: center;
 }
