--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -4,6 +4,7 @@
 @import "banner";
 @import "card";
 @import "card_show";
+@import "carousel";
 @import "footer";
 @import "form_legend_clear";
 @import "headers";
