--- a/app/views/instruments/show.html.erb
+++ b/app/views/instruments/show.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="show-container d-flex justify-content-around align-items-center mt-3">
+  <div class="show-container d-flex justify-content-between align-items-center mt-3">
     <div class="carousel-show">
       <%= render 'shared/carousel' %>
     </div>
@@ -9,11 +9,15 @@
       <p>Category: <%= @instrument.category %></p>
       <p>Used since: <%= @instrument.age %> years</p>
       <p>Price: <%= @instrument.price %>$/day</p>
-      <p>Owner: <%= cl_image_tag @instrument.user.photo.key, class: 'show-container-infos-img' %><%= @instrument.user.pseudo%></p>
+      <p>Owner: <% if @instrument.user.photo.attached? %>
+        <%= cl_image_tag @instrument.user.photo.key, class: 'show-container-infos-img' %><%= @instrument.user.pseudo%>
+        <% else %>
+        <%= image_tag 'icon-user.png', class: 'show-container-infos-img' %><%= @instrument.user.pseudo%>
+        <% end %></p>
     </div>
   </div>
-  <div class="show-container-map-reservation d-flex justify-content-between mt-5">
-    <div class="show-map" style="width: 100%; height: 600px;"
+  <div class="show-container-map-reservation d-flex justify-content-between mt-4">
+    <div class="show-map" style="width: 70%; height: 600px;"
         data-controller="map"
         data-map-markers-value="<%= @markers.to_json %>"
         data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
@@ -21,8 +25,8 @@
     <div class="show-reservation-card">
       <% if user_signed_in? && current_user.email === @instrument.user.email %>
         <div class="show-edit-delete">
-          <%= link_to "Edit", edit_instrument_path %>
-          <%= link_to "Delete", instrument_path, data: {turbo_method: :delete, turbo_confirm: 'Are you sure ?'} %>
+          <%= link_to "Edit", edit_instrument_path, class: 'btn btn-dark'%>
+          <%= link_to "Delete", instrument_path, data: {turbo_method: :delete, turbo_confirm: 'Are you sure ?'}, class: 'btn btn-dark'%>
         </div>
       <% else %>
         <div class="show-reservation d-flex flex-column">
