--- a/app/views/shared/_form_bookings.html.erb
+++ b/app/views/shared/_form_bookings.html.erb
@@ -13,5 +13,5 @@
                                   flatpickr_target: 'rentEndDate',
                                 } } %>
 
-  <%= f.submit class: "btn btn-primary w-100" %>
+  <%= f.submit class: "btn btn-dark w-100" %>
 <% end %>
