Put banner full page, and cards in the banner

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,2 +1,12 @@
 // Specific CSS for your home-page
-  
+.banner {
+    height: 100%;
+}
+
+.card-category {
+    background-color: #f4f4f4e8;
+}
+
+.card-text p {
+    color: black
+}
