--- a/app/views/instruments/_info_window.html.erb
+++ b/app/views/instruments/_info_window.html.erb
@@ -1,5 +1,5 @@
 <div class="infos_window">
 <h2><%= instrument.name %></h2>
-<p><%= instrument.adress %></p>
+<p><%= instrument.address %></p>
 <%= cl_image_tag instrument.photos[0].key %>
 </div>
