--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
 <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.unsplash.com/photo-1511379938547-c1f69419868d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2940&q=80);">
   <div class="container">
     <h1>RBNBEAT</h1>
-    <p><span data-controller="typed-js"></span></p>  
+    <p><span data-controller="typed-js"></span></p>
   </div>
 </div>
 
@@ -21,7 +21,6 @@
       <p>You have an instrument that you don't use ?</br>
       Don't let it gather dust and lend it</p>
     </div>
-    <button class="btn btn-dark"><%= link_to 'Share your instrument', bookings_path %></button>
+    <button class="btn btn-dark"><%= link_to 'Share your instrument', new_instrument_path %></button>
   </div>
 </div>
-
