creation of search bar and index instrumznt

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -8,6 +8,8 @@
 @import "form_legend_clear";
 @import "headers";
 @import "infos_window";
+@import "main_container";
 @import "map";
+@import "map_index";
 @import "navbar";
 @import "pager";
