--- a/app/views/instruments/index.html.erb
+++ b/app/views/instruments/index.html.erb
@@ -1,18 +1,18 @@
 <div class="container">
-  <h1>All instruments</h1>
-  <div class = "share">
-    <%= link_to "Share your instrument",new_instrument_path %>
-  </div>
-  <div class= "list-index">
-    <%= turbo_frame_tag "instruments" do %>
-      <%= render @instruments %>
-    <% end %>
-  </div>
+  <%= render "shared/form_search_bar" %>
 
-    <div style="width: 100%; height: 600px;"
-  data-controller="map"
-  data-map-markers-value="<%= @markers.to_json %>"
-  data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
+  <div class="main-container">
+    <div class= "list-index col-7">
+      <%= turbo_frame_tag "instruments" do %>
+      <%= render @instruments %>
+      <% end %>
+    </div>
+      <div style="height: 100vh;" class="map_index col-5"
+      data-controller="map"
+      data-map-markers-value="<%= @markers.to_json %>"
+      data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
+      </div>
+
   </div>
 
   <%= render "pager", pagy: @pagy %>
