--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -5,6 +5,9 @@
   font-size: large;
   font-weight: bold;
   font-style: italic;
+  position: sticky;
+  
+
 }
 
 .navbar-lewagon .navbar-collapse {
