--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -19,7 +19,7 @@
       <p>You have an instrument that you don't use ?</br>
       Don't let it gather dust and lend it</p>
     </div>
-    <%= link_to 'Share your instrument', bookings_path, class: 'btn btn-dark' %>
+    <%= link_to 'Share your instrument', new_instrument_path, class: 'btn btn-dark' %>
   </div>
 </div>
 
