--- a/app/views/shared/_form_instruments.html.erb
+++ b/app/views/shared/_form_instruments.html.erb
@@ -1,3 +1,4 @@
+<%= link_to "Get back to index", instruments_path, class: "btn btn-dark mt-3 mb-3"%>
 <%= simple_form_for(instrument) do |f| %>
   <%= f.input :name %>
   <%= f.input :category %>
@@ -5,6 +6,5 @@
   <%= f.input :age %>
   <%= f.input :price %>
   <%= f.input :photos, as: :file, input_html: { multiple: true } %>
-  <%= f.submit class: "btn btn-primary" %>
+  <%= f.submit class: "btn btn-dark" %>
 <% end %>
-<%= link_to "index", instruments_path, class: "btn btn-primary mt-3"%>
