front updated on login page

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -14,5 +14,5 @@
 @import "map_index";
 @import "navbar";
 @import "pager";
-@import "address_autocomplete"
+@import "address_autocomplete";
 @import "login";
