--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -20,7 +20,7 @@
               <p>To: <strong><%= booking.rent_end_date%></strong></p>
               <p>Status: <strong><%= booking.status%></strong></p>
               <p>Owner: <strong><%= booking.instrument.user.pseudo %></strong></p>
-              <p>Adress: <strong><%= booking.instrument.adress %></strong></p>
+              <p>Address: <strong><%= booking.instrument.address %></strong></p>
             </div>
           </div>
         </div>
