--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -1,9 +1,16 @@
 // Import Google fonts
 @import url('https://fonts.googleapis.com/css?family=Nunito:400,700|Work+Sans:400,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Jaldi&family=Quattrocento+Sans&family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Fredoka&family=Fredoka+One&family=Lobster&family=Lobster+Two&display=swap');
 
 // Define fonts for body and headers
 $body-font: "Work Sans", "Helvetica", "sans-serif";
 $headers-font: "Nunito", "Helvetica", "sans-serif";
+$body-font: "Jaldi", "Helvetica", "sans-serif";
+$headers-font: "Roboto", "Helvetica", "cursive";
+$button-font: "Lobster", "Helvetica", "cursive";
+$home-font: 'Lobster Two', "Helvetica", "cursive";
+$desc-font: 'Fredoka', 'Helvetica', 'cursive'
 
 // To use a font file (.woff) uncomment following lines
 // @font-face {
